@@ -1,5 +1,13 @@
 ==================================================
-Commit Hash: 4bd51d3577eda2bc4f8fc1c772250819b53e4092
+Commit Hash: e639c95254cfa06f19917359d0b62c20c3260971
+Author: Niwatori401
+Date: Tue Mar 14 11:58:08 2023
+
+Add colossal large meals
+Update description tags for existing large meals
+
+==================================================
+Commit Hash: b33046d0466e1bb7da0bfc508ed3ee7d5e8aa8e3
 Author: Niwatori401
 Date: Tue Mar 14 11:25:12 2023
 
